<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:opencv="http://schemas.android.com/apk/res-auto"  
    android:layout_width="match_parent"
    android:layout_height="match_parent">
     
    <mbs.RVAllMission12345.MisiView
     	android:layout_width="match_parent"  
     	android:layout_height="match_parent"
     	android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
     	android:id="@+id/activity_surface_view"  
     	opencv:show_fps="true"  
     	opencv:camera_id="any" />  
     	
    <LinearLayout
        android:id="@+id/lay"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    
    <Button 
        android:id="@+id/tombolH"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/textH"/>
    
    <Button 
        android:id="@+id/tombolS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/textS"/>
    
    <Button 
        android:id="@+id/tombolV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/textV"/>
    
    <Button 
        android:id="@+id/tombolED"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/textED"/>
    
    <Button 
        android:id="@+id/tombolEW"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/textExp"/>
    
    <Button 
        android:id="@+id/tombolTiang"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/textTiang"/>
    
    <Button 
        android:id="@+id/tombolMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/textMenu"/>
    
    </LinearLayout>
     	
    <SeekBar
        android:id="@+id/max"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/lay"/>
    
    <SeekBar
        android:id="@+id/min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/max"/>
 
</RelativeLayout>